--- a/IdentityWithSpieser/IdentityWithSpieser.csproj
+++ b/IdentityWithSpieser/IdentityWithSpieser.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="AspNetCore.Identity.MongoDbCore" Version="6.0.0" />
+    <PackageReference Include="bootstrap" Version="5.3.3" />
+    <PackageReference Include="Radzen.Blazor" Version="6.0.18" />
   </ItemGroup>
 
 </Project>
